// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom FAB with no shadow(iOS) 1`] = `
<View
  accessibilityLabel="Custom FAB with no shadow(iOS)"
  accessibilityRole="button"
  accessible={true}
  enableFocusRing={true}
  focusable={true}
  iconPosition="before"
  onBlur={[Function]}
  onFocus={[Function]}
  onHoverIn={[Function]}
  onHoverOut={[Function]}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "#0078d4",
      "borderRadius": 9999,
      "flexDirection": "row",
      "overflow": "hidden",
    }
  }
>
  <Text
    ellipsizeMode="tail"
    numberOfLines={0}
    style={
      Object {
        "color": "#ffffff",
        "fontFamily": "System",
        "fontSize": 12,
        "fontWeight": "400",
        "margin": 0,
        "marginBottom": 0,
        "marginEnd": 0,
        "marginStart": 0,
        "marginTop": 0,
      }
    }
  >
    Custom FAB with no shadow(iOS)
  </Text>
</View>
`;

exports[`Default FAB (iOS) 1`] = `
<View
  style={
    Object {
      "alignSelf": "baseline",
      "backgroundColor": "#0078d4",
      "borderRadius": 9999,
      "bottom": undefined,
      "end": undefined,
      "left": undefined,
      "margin": undefined,
      "marginBottom": undefined,
      "marginEnd": undefined,
      "marginHorizontal": undefined,
      "marginLeft": undefined,
      "marginRight": undefined,
      "marginStart": undefined,
      "marginTop": undefined,
      "marginVertical": undefined,
      "overflow": "hidden",
      "right": undefined,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0.12,
      "shadowRadius": 1,
      "start": undefined,
      "top": undefined,
    }
  }
>
  <View
    accessibilityLabel="Default FAB (iOS)"
    accessibilityRole="button"
    accessible={true}
    enableFocusRing={true}
    focusable={true}
    iconPosition="before"
    onBlur={[Function]}
    onFocus={[Function]}
    onHoverIn={[Function]}
    onHoverOut={[Function]}
    onPress={[Function]}
    onPressIn={[Function]}
    onPressOut={[Function]}
    style={
      Object {
        "alignItems": undefined,
        "alignSelf": "baseline",
        "backgroundColor": "#0078d4",
        "borderBottomWidth": undefined,
        "borderEndWidth": undefined,
        "borderLeftWidth": undefined,
        "borderRadius": 9999,
        "borderRightWidth": undefined,
        "borderStartWidth": undefined,
        "borderTopWidth": undefined,
        "borderWidth": undefined,
        "flexDirection": "row",
        "flexWrap": undefined,
        "overflow": "hidden",
        "padding": undefined,
        "paddingBottom": undefined,
        "paddingEnd": undefined,
        "paddingHorizontal": undefined,
        "paddingLeft": undefined,
        "paddingRight": undefined,
        "paddingStart": undefined,
        "paddingTop": undefined,
        "paddingVertical": undefined,
        "shadowColor": "#000000",
        "shadowOffset": Object {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 0.14,
        "shadowRadius": 4,
      }
    }
  >
    <Text
      ellipsizeMode="tail"
      numberOfLines={0}
      style={
        Object {
          "color": "#ffffff",
          "fontFamily": "System",
          "fontSize": 12,
          "fontWeight": "400",
          "margin": 0,
          "marginBottom": 0,
          "marginEnd": 0,
          "marginStart": 0,
          "marginTop": 0,
        }
      }
    >
      Default FAB (iOS)
    </Text>
  </View>
</View>
`;
